tests/fixtures/runtime/syntax_error.txt
  File "/workspace/bad.py", line 3
    def broken(:
               ^
SyntaxError: invalid syntax
